# hetero

./: CreateBloom.cpp  Makefile.am  README.md  configure.ac  hetero.cpp
Common/: Sequence.cpp  Sequence.h
